<resources>
    <string name="app_name">Pie_Chart_Haushalt_V1</string>
    <string name="Kat_Lebensmittel">Lebensmittel</string>
    <string name="Kat_Wohnen">Wohnen</string>
    <string name="Kat_Verkehrsmittel">Verkehrsmittel</string>
    <string name="Kat_Gesundheit">Gesundheit</string>
    <string name="Kat_Freizeit">Freizeit</string>
    <string name="Kat_Sonstiges">Sonstiges</string>
</resources>