<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/color_white"
tools:context=".MainActivity">

<!-- Card view for displaying the -->
<!-- Pie chart and details of pie chart -->
<androidx.cardview.widget.CardView
    android:id="@+id/cardViewGraph"
    android:layout_width="match_parent"
    android:layout_height="320dp"
    android:layout_marginTop="20dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:elevation="10dp"
    app:cardCornerRadius="10dp">


    <!--Linear layout to display pie chart -->
    <!-- and details of pie chart-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="3">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="Übersicht"
            android:paddingLeft="150dp"
            android:layout_marginTop="5dp"
            android:textSize="16sp"/>

        />

        <!--Pie chart to display the data-->
        <org.eazegraph.lib.charts.PieChart
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/piechart"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:padding="6dp"
            />

        <!--Creating another linear layout -->
        <!-- to display pie chart details -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:layout_gravity="center_vertical">

                <!--View to display the green color icon-->
                <View
                    android:layout_width="15dp"
                    android:layout_height="match_parent"
                    android:background="@color/Wohnen" />

                <!--Text view to display Wohnen -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:textSize="12sp"
                    android:text="@string/Kat_Wohnen" />

            </LinearLayout>

            <!--Linear layout to display Lebensmittel-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="5dp">

                <!--View to display the yellow color icon-->
                <View
                    android:layout_width="15dp"
                    android:layout_height="match_parent"
                    android:background="@color/Lebensmittel" />

                <!--Text view to display Lebensmittel text -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:textSize="12sp"
                    android:text="@string/Kat_Lebensmittel" />

            </LinearLayout>

            <!--Linear layout to display Verkehrsmittel-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="5dp">

                <!--View to display the red color icon-->
                <View
                    android:layout_width="15dp"
                    android:layout_height="match_parent"
                    android:background="@color/Verkehrsmittel" />

                <!--Text view to display Verkehrsmittel text -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:textSize="12sp"
                    android:text="@string/Kat_Verkehrsmittel" />

            </LinearLayout>

            <!--Linear layout to display Gesundheit-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="5dp">

                <!--View to display the blue color icon-->
                <View
                    android:layout_width="15dp"
                    android:layout_height="match_parent"
                    android:background="@color/Gesundheit" />

                <!--Text view to display Gesundheit text -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:textSize="12sp"
                    android:text="@string/Kat_Gesundheit" />

            </LinearLayout>

            <!--Linear layout to display Freizeit-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="5dp">

                <!--View to display the grau color icon-->
                <View
                    android:layout_width="15dp"
                    android:layout_height="match_parent"
                    android:background="@color/Freizeit" />

                <!--Text view to display Freizeit text -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:textSize="12sp"
                    android:text="@string/Kat_Freizeit" />

            </LinearLayout>

            <!--Linear layout to display Sonstiges-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="5dp">

                <!--View to display the Rosa color icon-->
                <View
                    android:layout_width="15dp"
                    android:layout_height="match_parent"
                    android:background="@color/Sonstiges" />

                <!--Text view to display Sonstiges text -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:textSize="12sp"
                    android:text="@string/Kat_Sonstiges" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>


<!-- Another Card view for displaying -->
<!-- Use of programming languages -->
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:layout_below="@+id/cardViewGraph"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="20dp"
    android:elevation="10dp"
    app:cardCornerRadius="10dp"
    android:id="@+id/details">

    <!--Relative layout to display -->
    <!-- use of programming languages -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--Text view to use of -->
        <!-- programming languages text-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Ausgaben pro Kategorie"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"/>

        <!--View to display the line-->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_two"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp">

            <!--Text view to display R -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/Kat_Wohnen"
                android:textSize="15sp"/>

            <!--Text view to display the -->
            <!-- used. For now default set to 0-->
            <TextView
                android:id="@+id/tvWohnen"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:fontFamily="sans-serif-light"
                android:text="0"
                android:textAlignment="textEnd"
                android:textColor="@color/color_one"
                android:textSize="15sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <!--View to display the line-->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_two"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/Kat_Lebensmittel"
                android:textSize="15sp"/>

            <!--Text view to display the percentage -->
            <!-- of programming language used. -->
            <!-- For now default set to 0-->

            <TextView
                android:id="@+id/tvLebensmittel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:fontFamily="sans-serif-light"
                android:text="0"
                android:textAlignment="textEnd"
                android:textColor="@color/color_one"
                android:textSize="15sp"
                android:textStyle="bold" />

        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_two"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/Kat_Verkehrsmittel"
                android:textSize="15sp"/>

            <!--Text view to display the percentage -->
            <!-- of programming language used. -->
            <!-- For now default set to 0-->
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:id="@+id/tvVerkehrsmittel"
                android:textAlignment="textEnd"
                android:textSize="15sp"
                android:textColor="@color/color_one"
                android:textStyle="bold"
                android:fontFamily="sans-serif-light"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_two"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/Kat_Gesundheit"
                android:textSize="15sp"/>

            <!--Text view to display the percentage -->
            <!-- of programming language used. -->
            <!-- For now default set to 0-->
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:id="@+id/tvGesundheit"
                android:textAlignment="textEnd"
                android:textSize="15sp"
                android:textColor="@color/color_one"
                android:textStyle="bold"
                android:fontFamily="sans-serif-light"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_two"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/Kat_Freizeit"
                android:textSize="15sp"/>

            <!--Text view to display the percentage -->
            <!-- of programming language used. -->
            <!-- For now default set to 0-->
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:id="@+id/tvFreizeit"
                android:textAlignment="textEnd"
                android:textSize="15sp"
                android:textColor="@color/color_one"
                android:textStyle="bold"
                android:fontFamily="sans-serif-light"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_two"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/Kat_Sonstiges"
                android:textSize="15sp"/>

            <!--Text view to display the percentage -->
            <!-- of programming language used. -->
            <!-- For now default set to 0-->
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:id="@+id/tvSonstiges"
                android:textAlignment="textEnd"
                android:textSize="15sp"
                android:textColor="@color/color_one"
                android:textStyle="bold"
                android:fontFamily="sans-serif-light"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>

</RelativeLayout>
